обновленный item grpc server
